Fix/edit map selected tiles css (#1411)
* Limit to 100characters TileMapLayer info and wrap into Segment

* allow to click through TileMap info

* use _.truncate / remove extra spans

--- a/code13/app/client/imports/components/Assets/Common/Map/EditMap.css
+++ b/code13/app/client/imports/components/Assets/Common/Map/EditMap.css
@@ -30,6 +30,8 @@
     -webkit-user-select: none;
     cursor: default;
     overflow: hidden;
+  /* fix fixed elements */
+  transform: translate(0, 0);
 }
 
 .MapPlayer {
